--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+@import './style/themes/default.less';
+
+#root {
+  height: 100vh;
 }
