--- a/src/style/core/_transitions.less
+++ b/src/style/core/_transitions.less
@@ -1,21 +1,33 @@
 @primary-transition: .3s ease-in;
 
-.fade-transition {
+.fill() {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.slide-transition {
   &-enter {
     opacity: 0;
+    transform: translateX(-3rem);
   }
 
   &-enter-active {
     opacity: 1;
+    transform: translateX(0);
     transition: @primary-transition;
   }
 
   &-leave {
     opacity: 1;
+    transform: translateX(0);
   }
 
   &-leave-active {
     opacity: 0;
+    transform: translateX(3rem);
     transition: @primary-transition;
   }
 }
