--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,3 +8,11 @@ html {
   position: relative;
   height: 100%;
 }
+
+.loading {
+  .fill;
+  background: rbga(0,0,0, .05);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
