--- a/src/components/MainLayout/style/index.less
+++ b/src/components/MainLayout/style/index.less
@@ -30,6 +30,10 @@
 
   &-container {
     margin: 0 16px;
+
+    .ant-breadcrumb-link > .anticon + a {
+      margin-left: 4px;
+    }
   }
 
   &-content-wrapper {
