--- a/src/components/LoginLayout/style/index.less
+++ b/src/components/LoginLayout/style/index.less
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url("/img/bg-login.jpg");
+  background: url('../../../assets/img/bg-login.jpg');
 
   .login {
     &-wrap {
