add: 异步加载组件 加载动画

--- a/src/style/containers/app.less
+++ b/src/style/containers/app.less
@@ -62,6 +62,14 @@
     min-height: 360px;
   }
 
+  .content-loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    min-height: 360px;
+  }
+
   .main-sider.ant-layout-sider-collapsed + .main-content {
     margin-left: @sider-collapsed-width;
   }
