--- a/src/style/_base.less
+++ b/src/style/_base.less
@@ -1,11 +1,17 @@
+#root,
 body,
 html {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 .full-width {
   width: 100%;
+}
+
+.full-height {
+  height: 100%;
 }
 
 .fill {
