--- a/src/style/containers/login.less
+++ b/src/style/containers/login.less
@@ -1,10 +1,15 @@
 .login {
-  &-container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
-    padding-top: 100px;
+  &-wrapper {
+    position: absolute;
+    width: 320px;
+    top: 50%;
+    left: 50%;
+    margin-top: -160px;
+    margin-left: -160px;
+    border: @border-base;
+    border-radius: @border-radius-base;
     background: #fff;
+    z-index: 1;
   }
 
   &-head {
@@ -16,9 +21,6 @@
   }
 
   &-form {
-    .border-base;
-    border-radius: @border-radius-base;
-    padding: 0 24px;
-    background: #fff;
+    margin: 0 24px;
   }
 }
